Fix z-index

--- a/src/components/dialog/dropdown/Dropdown.module.scss
+++ b/src/components/dialog/dropdown/Dropdown.module.scss
@@ -15,7 +15,7 @@
 
 .dropdownList {
 	position: absolute;
-	z-index: 2;
+	z-index: 3;
 	background: $background-color-primary;
 	box-shadow: $box-shadow;
 	border: $box-border;
